# pytest-book

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements-tests.txt  requirements.txt
examples/: __init__.py
python/cards/: __init__.py  __main__.py  api.py  cli.py  db.py
tests/: __init__.py  _test_api_class.py  _test_api_funcs.py  conftest.py  test_api_funcs.py  test_card.py  test_card_fail.py  test_count.py  test_counts.py  test_counts_initial.py  test_fail.py  test_fixtures.py  test_mod_scope.py  test_one.py  test_success.py  test_two.py
