[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cards"
description = "project description"
version = "0.1.0"
dependencies = [
    "click",
    "sqlalchemy",
    "rich",
]

authors = [
    {name = "the-citto", email = "my.email@domain.com"}
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: MIT",
    "Operating System :: Linux"
]

[project.optional-dependencies]
tests = ["pytest"]
dev = [
    "pytest",
    "ipython",
]

[project.scripts]
cards = "cards:cli.cli"

[project.gui-scripts]
cards_basew = "cards:__main__.main"


[tool.setuptools]
package-dir = {"" = "python"}


[tool.pyright]
venvPath = "."
venv = ".venv"

include = [
    "python",
    "tests",
]
exclude = [
    "__pycache__",
    ".git",
    ".venv",
    "_old",
    "_tmp",
]


[tool.ruff]
exclude = [
    "__pycache__",
    ".git",
    ".venv",
    "_old",
    "_tmp",
]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = [
    "ALL"
]
ignore = [
    # This rule is deprecated and will be removed in a future release.
    "ANN101", # Missing type annotation for `self` in method
    "ERA001", # Found commented-out code
    "TD003", # Missing issue link on the line following this TODO
]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = [
    # "ARG", # Unused function args -> fixtures nevertheless are functionally relevant...
    # "FBT", # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    "D103", # Missing docstring in public function
    "PLR2004", # Magic value used in comparison
    "S101",  # Use of `assert` detected
    # "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
]

[tool.ruff.isort]
known-first-party = ["python"]

